--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Hello, world</h1>
+    <h2>test</h2>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
