--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
+    <title>Infinity Scroll</title>
     <link rel="icon" type="image/png" href="https://www.google.com/s2/favicons?domain=codepen.io">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Unsplash API - Infinity Scroll</h1>
+    <div class="loader" id="loader" hidden>
+        <img src="loader.svg" alt="loading">
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
