--- a/index.html
+++ b/index.html
@@ -13,12 +13,7 @@
     <div class="loader" id="loader" hidden>
         <img src="loader.svg" alt="loading">
     </div>
-    <div class="image-container" id="image-container">
-        <img src="https://images.unsplash.com/photo-1668670975877-4e95bcb16145?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1528&q=80" alt="">
-        <img src="https://images.unsplash.com/photo-1668670975877-4e95bcb16145?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1528&q=80" alt="">
-        <img src="https://images.unsplash.com/photo-1668670975877-4e95bcb16145?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1528&q=80" alt="">
-        <img src="https://images.unsplash.com/photo-1668670975877-4e95bcb16145?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1528&q=80" alt="">
-    </div>
+    <div class="image-container" id="image-container"></div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
